Add Android Studio 3.0 and 3.1 canary 1 link

--- a/index.html
+++ b/index.html
@@ -324,145 +324,77 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <!-- 3.0 RC2 -->
+                            <!-- 3.1 Canary 1 -->
                             <tr>
-                                <td rowspan="5">3.0 RC2</td>
+                                <td rowspan="5">3.1 Canary 1</td>
                             </tr>
                             <tr>
                                 <td rowspan="2">Windows</td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.17/android-studio-ide-171.4402976-windows.zip">android-studio-ide-171.4402976-windows.zip</a>
+                                    <a href="https://developer.android.google.cn/studio/archive.html#android-studio-3-1-canary-1">android-studio-bundle-171.4415322-windows.zip</a>
                                 </td>
-                                <td>772876431 bytes</td>
-                                <td>9728ce4f45c767d0f1ce39dcd5889b17decf8ffe60521b54f1b9737c510ee87e</td>
-                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNc79ly1fkpo0w7hqmj31kw0jbjyl.jpg">查看</a></td>
+                                <td>814707698 bytes</td>
+                                <td>c0e029eb49c17a8d0c3b8b0af4054210d7cb98f245ce6bd814265a41333a2257</td>
+                                <td rowspan="5"><a href="https://ws3.sinaimg.cn/large/006tNc79ly1fkvnyonub6j30vz0csmzv.jpg">查看</a></td>
                             </tr>
                             <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.17/android-studio-ide-171.4402976-windows32.zip">android-studio-ide-171.4402976-windows32.zip</a>
+                                <td align="left"><a href="https://developer.android.google.cn/studio/archive.html#android-studio-3-1-canary-1">android-studio-ide-171.4415322-windows32.zip</a>
                                 </td>
-                                <td>772346685 bytes</td>
-                                <td>de5799dd0b75a85c8aa344d9e5f073e9879ba9eb71749806050166b78fab6d78</td>
+                                <td>814178949 bytes</td>
+                                <td>220c95aab9ad83eb6c646275aaee9c4a735695ad64da3968b7961bb97e2e6bac</td>
                             </tr>
                             <tr>
-                                <td> Mac OS X</td>
+                                <td>Mac OS X</td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.17/android-studio-ide-171.4402976-mac.zip">android-studio-ide-171.4402976-mac.dmg</a>
+                                    <a href="https://developer.android.google.cn/studio/archive.html#android-studio-3-1-canary-1">android-studio-ide-171.4415322-mac.dmg</a>
                                 </td>
-                                <td>771858992 bytes</td>
-                                <td>b96a13a25562c44a3b213c25afa0c64eab888e653f71b16b1edf940efecabfdf</td>
+                                <td>814189458 bytes</td>
+                                <td>a1945308fd7b01ab3360a6d1b7570cf1e48cb5788f09783b9851d1d54246558d</td>
                             </tr>
                             <tr>
                                 <td>Linux</td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.17/android-studio-ide-171.4402976-linux.zip">android-studio-ide-171.4402976-linux.zip</a>
+                                    <a href="https://developer.android.google.cn/studio/archive.html#android-studio-3-1-canary-1">android-studio-ide-171.4415322-linux.zip</a>
                                 </td>
-                                <td>771334362 bytes</td>
-                                <td>6eef456231f73f03e9f502e878cbb87789319892780251b0ead257d60266c5a1</td>
+                                <td>813165347 bytes</td>
+                                <td>f2f5959168753a206342cb5b3da205c43c60a031df49dc92f6fd8b57cde6af23</td>
                             </tr>
-                            <!-- 3.0 RC1 -->
+                            <!-- 3.0 正式版 -->
                             <tr>
-                                <td rowspan="5">3.0 RC1</td>
+                                <td rowspan="5">3.0 正式版</td>
                             </tr>
                             <tr>
                                 <td rowspan="2">Windows</td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.16/android-studio-ide-171.4392136-windows.zip">android-studio-ide-171.4392136-windows.zip</a>
+                                    <a href="https://developer.android.google.cn/studio/archive.html#android-studio-3-0">android-studio-bundle-171.4408382-windows.exe</a>
                                 </td>
-                                <td>772875799 bytes</td>
-                                <td>c91c8daafeae4af284fd06e37502e55a081b048d0786553ca8b9a3d24b5a6f10</td>
-                                <td rowspan="5"><a href="https://ws3.sinaimg.cn/large/006tKfTcly1fkk4i1h9udj30wp0gfmzu.jpg">查看</a></td>
+                                <td>681 MB</td>
+                                <td>627d7f346bf4825a405a9b99123e7e92d0988dc6f4912552511e3685764a0044</td>
+                                <td rowspan="5"><a href="https://ws3.sinaimg.cn/large/006tNc79ly1fkvnyonub6j30vz0csmzv.jpg">查看</a></td>
                             </tr>
                             <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.16/android-studio-ide-171.4392136-windows32.zip">android-studio-ide-171.4392136-windows32.zip</a>
+                                <td align="left"><a href="https://developer.android.google.cn/studio/archive.html#android-studio-3-0">android-studio-ide-171.4408382-windows32.zip</a>
                                 </td>
-                                <td>772346053 bytes</td>
-                                <td>f90af64a5262fbfa4f40f80622c24d0acc4bfb9cbfc7f181dc84391aa0629bb6</td>
+                                <td>736 MB</td>
+                                <td>29399953024b0b4c72df62e94e0850c20b623b887e67bbfce713acb7baed8740</td>
                             </tr>
                             <tr>
-                                <td> Mac OS X</td>
+                                <td>
+                                    <nobr>Mac OS X</nobr>
+                                </td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.16/android-studio-ide-171.4392136-mac.zip">android-studio-ide-171.4392136-mac.dmg</a>
+                                    <a href="https://developer.android.google.cn/studio/archive.html#android-studio-3-0">android-studio-ide-171.4408382-mac.dmg</a>
                                 </td>
-                                <td>771968570 bytes</td>
-                                <td>5ffba5bec8b8795ccacfe6f7116822b2dbb865f3e536d711e60d1b3575d930f7</td>
+                                <td>731 MB</td>
+                                <td>f6c455fb1778b3949e4870ddb701498bd27351c072e84f4328bd49986c4ab212</td>
                             </tr>
                             <tr>
                                 <td>Linux</td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.16/android-studio-ide-171.4392136-linux.zip">android-studio-ide-171.4392136-linux.zip</a>
+                                    <a href="https://developer.android.google.cn/studio/archive.html#android-studio-3-0">android-studio-ide-171.4408382-linux.zip</a>
                                 </td>
-                                <td>771333731 bytes</td>
-                                <td>c52fd6b694624861d13935eaa3aed3182408b69b7d2d0f208f10af43d7c2ea8f</td>
-                            </tr>
-                            <!-- 3.0 Beta7 -->
-                            <tr>
-                                <td rowspan="5">3.0 Beta7</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="2">Windows</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.15/android-studio-ide-171.4365657-windows.zip">android-studio-ide-171.4365657-windows.zip</a>
-                                </td>
-                                <td>763685550 bytes</td>
-                                <td>fda68bbf4540f25cf8d1287e31200031baa7864e33c3396bcb4b33c05ae3bfd3</td>
-                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tKfTcly1fkd5lguz55j31kw0r3wm3.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.15/android-studio-ide-171.4365657-windows32.zip">android-studio-ide-171.4365657-windows32.zip</a>
-                                </td>
-                                <td>763155804 bytes</td>
-                                <td>a6a426321ffc976bee7771b31b3f213c2b353eeb6a5e92624661e8e169f81530</td>
-                            </tr>
-                            <tr>
-                                <td> Mac OS X</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.15/android-studio-ide-171.4365657-mac.zip">android-studio-ide-171.4365657-mac.dmg</a>
-                                </td>
-                                <td>762975386 bytes</td>
-                                <td>a1845cac07e4b53eff9c1dc51fc202bf3ee4dacc7aba2238280c2bdd784c0420</td>
-                            </tr>
-                            <tr>
-                                <td>Linux</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.15/android-studio-ide-171.4365657-linux.zip">android-studio-ide-171.4365657-linux.zip</a>
-                                </td>
-                                <td>762143465 bytes</td>
-                                <td>663564903130e2a5694d621d720c25106cfa45df9ddd5ad28c02a5a700cea32a</td>
-                            </tr>
-                            <!-- 3.0 Beta6 -->
-                            <tr>
-                                <td rowspan="5">3.0 Beta6</td>
-                            </tr>
-                            <tr>
-                                <td rowspan="2">Windows</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.14/android-studio-ide-171.4333198-windows.zip">android-studio-ide-171.4333198-windows.zip</a>
-                                </td>
-                                <td>763247713 bytes</td>
-                                <td>7d4e1e7d64df3eff70efd3d40f109b8c572a0af98030be94559f19f00dc466ab</td>
-                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tKfTcly1fjj4qwbnkgj31kw0qv7b8.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.14/android-studio-ide-171.4333198-windows32.zip">android-studio-ide-171.4333198-windows32.zip</a>
-                                </td>
-                                <td>762717967 bytes</td>
-                                <td>de69cab769c168d37cedb3f1e47edfcbd04e69e847339a7002140e4f9aaba68c</td>
-                            </tr>
-                            <tr>
-                                <td> Mac OS X</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.14/android-studio-ide-171.4333198-mac.zip">android-studio-ide-171.4333198-mac.dmg</a>
-                                </td>
-                                <td>762717967 bytes</td>
-                                <td>386dafc2846542acbd8280ed89fe41434d2de5347d5ae41548e8d7c508e94e09</td>
-                            </tr>
-                            <tr>
-                                <td>Linux</td>
-                                <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.0.14/android-studio-ide-171.4333198-linux.zip">android-studio-ide-171.4333198-linux.zip</a>
-                                </td>
-                                <td>761705628 bytes</td>
-                                <td>f397b26d0b9de78de8433ec64c9f31710daf9e4f10040837dc576bbb801c2a1c</td>
+                                <td>735 MB</td>
+                                <td>7991f95ea1b6c55645a3fc48f1534d4135501a07b9d92dd83672f936d9a9d7a2</td>
                             </tr>
                             <!-- 2.3.2 -->
                             <tr>
