Add hide and show css class and add bigapple ad qrcode

--- a/index.html
+++ b/index.html
@@ -178,11 +178,16 @@
     </header>
     <div id="auto-scroll-ad-box" style="z-index: 10; right: 0px; position: absolute; top: 1012px;">
         <div class="ad-float-right">
+            <a href="https://weidian.com/item.html?itemID=2189752818&amp;ifr=itemdetail&amp;wfr=androiddevtools&amp;from=click-right-float-sidebar" title="朋友家自己种的新鲜脆甜烟台大苹果🍎10斤/62元包邮，纯天然无公害，不打蜡" onclick="trackOutboundLink('https://weidian.com/item.html?itemID=2189752818', 'AD-YanTaiBigApple', 'click');" target="_blank">
+                <img src="https://ws2.sinaimg.cn/large/006tNc79ly1fl65xenyvbj303m03mdgb.jpg">
+            </a>
+        </div>
+        <div class="ad-float-right hide">
             <a href="http://hencoder.com" title="扔物线辞职在家憋了一年的大招，良心之作。" onclick="trackOutboundLink('http://hencoder.com', 'AD-HenCoder', 'click');" target="_blank">
                 <img src="http://ws4.sinaimg.cn/large/006tKfTcly1fhw3x0gn80j303m03mjrd.jpg">
             </a>
         </div>
-        <div class="ad-float-right">
+        <div class="ad-float-right hide">
             <a href="" title="脉脉不得语的公众号" onclick="trackOutboundLink('http://www.androidweekly.cn', 'AD-Wechat-Me', 'click');" target="_blank">
                 <img src="http://ws3.sinaimg.cn/large/006tKfTcly1fhw3x145mrj303m03mmx3.jpg">
             </a>
@@ -192,7 +197,7 @@
                 <img src="http://ws2.sinaimg.cn/large/006tKfTcly1fhw3x0z64zj303m03m0sm.jpg">
             </a>
         </div>
-        <div class="ad-float-right">
+        <div class="ad-float-right hide">
             <a href="http://t.cn/Ro1OZoN" title="Raspberry Pi 3 Model B 树莓派3代控制器 含系统卡 电源 散热片 保护外壳--奥松机器人RobotBase" onclick="trackOutboundLink('http://t.cn/Ro1OZoN', 'AD-Amazon-RaspberryPi-3-MB', 'click');" target="_blank">
                 <img src="http://ws1.sinaimg.cn/large/006tKfTcly1fhw3x0odfmj303m03m746.jpg">
             </a>
