Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1672,11 +1672,20 @@
                                 <td>剑煮文</td>
                                 <td>¥18.8</td>
                             </tr>
+                            <tr>
+                                <td>许安灵</td>
+                                <td>¥1.24</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
-            
         </div>
         <div  class="container body-container margin-top-16">
             <!-- 评论框 -->
