--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <ul class="nav nav-pills" role="tablist">
                                 <!--  Android SDK Tools -->
                                 <li role="presentation" class="dropdown">
-                                    <a id="drop-sdk-tools" href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Android SDK Tools</span></a>
+                                    <a id="drop-sdk-tools" href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Android SDK 工具</span></a>
                                     <ul id="menu-sdl-tools" class="dropdown-menu" role="menu" aria-labelledby="drop-sdk-tools">
                                         <li role="presentation"><a role="menuitem" tabindex="0" href="#android-studio">Android Studio</a></li>
                                         <li role="presentation"><a role="menuitem" tabindex="2" href="#sdk-tools">SDK Tools</a></li>
@@ -77,7 +77,7 @@
                                 </li>
                                 <!--  Android Dev Tools -->
                                 <li role="presentation" class="dropdown">
-                                    <a id="drop-dev-tools" href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Android Dev Tools</a>
+                                    <a id="drop-dev-tools" href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Android 开发工具</a>
                                     <ul id="menu-dev-tool" class="dropdown-menu" role="menu" aria-labelledby="drop-dev-tools">
                                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#gradle">Gradle</a></li>
                                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#version-control-tools">版本控制工具</a></li>
@@ -113,9 +113,7 @@
                                 </li>
                                 <!--  Android Dev Guides    -->
                                 <li role="presentation" class="dropdown">
-                                    <a id="drop-dev-guides" href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                     Guides
-                                    </a>
+                                    <a id="drop-dev-guides" href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">指南</a>
                                     <ul id="menu-dev-guides" class="dropdown-menu" role="menu" aria-labelledby="drop-dev-guides">
                                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#android-dev-docs">Android 开发文档</a></li>
                                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#google-java-program-guide-cn">Google Java编程风格指南中文版</a></li>
@@ -128,9 +126,7 @@
                                 </li>
                                 <!--  Android Dev Tutorials -->
                                 <li role="presentation" class="dropdown">
-                                    <a id="drop-dev-tutorials" href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                     Tutorials
-                                    </a>
+                                    <a id="drop-dev-tutorials" href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">教程</a>
                                     <ul id="menu3" class="dropdown-menu" role="menu" aria-labelledby="drop-dev-tutorials">
                                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#android-learning-way">Android学习之路</a></li>
                                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#google-androidtraining-tutorials">Android官方培训课程中文版</a></li>
@@ -140,9 +136,7 @@
                                 </li>
                                 <!--  Design Tools  -->
                                 <li role="presentation" class="dropdown">
-                                    <a id="drop-design-tools" href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Design Tools
-                                    </a>
+                                    <a id="drop-design-tools" href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">设计工具</a>
                                     <ul id="menu4" class="dropdown-menu" role="menu" aria-labelledby="drop-design-tools">
                                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#photoshop-plugin">Photoshop插件</a></li>
                                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#vector-img-design-tools">矢量图设计工具</a></li>
@@ -164,7 +158,8 @@
                                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#free-design-resources">Design Resources</a></li>
                                     </ul>
                                 </li>
-                                <li role="presentation" class="dropdown"><a id="gay_friends" href="gay_friends.html">GFriends</a></li>
+                                <li role="presentation" class="dropdown"><a id="gay_friends" href="gay_friends.html">好基友们</a></li>
+                                <li role="presentation" class="dropdown"><a id="donate" href="donate.html">捐赠</a></li>
                                 <!-- <li id="ts-search-input-li"><form><input type="search" id="ts-search-input" placeholder="搜索: Android Studio"></form></li> -->
                                 <li>
                                     <a href="https://github.com/inferjay/AndroidDevTools" data-title="View GitHub Project" class="menu-github-icon"><img src="static/image/icon-github.png" alt="GitHub" /></a>
