Add Android Stuido 3.1 Preview 2 and Preview 3 download link

--- a/index.html
+++ b/index.html
@@ -317,6 +317,76 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.1 Canary 3 -->
+                            <tr>
+                                <td rowspan="5">3.1 Canary 3</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.1/android-studio-ide-171.4435470-windows.zip">android-studio-bundle-171.4435470-windows.zip</a>
+                                </td>
+                                <td>830677658 bytes</td>
+                                <td>eae3451ed1be108971e61330e7bcac96e1de37d292ebb7b871f86f5eb139eb4d</td>
+                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tKfTcly1flfltqo9vsj31kw0qsqal.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.1/android-studio-ide-171.4435470-windows32.zip">android-studio-ide-171.4435470-windows32.zip</a>
+                                </td>
+                                <td>830148909 bytes</td>
+                                <td>07253725b03cc8f7b419a56f811e5a796268447e7417e8d2060a07983899527b</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.1/android-studio-ide-171.4435470-mac.zip">android-studio-ide-171.4435470-mac.dmg</a>
+                                </td>
+                                <td>830159388 bytes</td>
+                                <td>b82cd387da3f5787afffca096f19a0d47fd165a710fafc6d6fe50538377baf09</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.1/android-studio-ide-171.4435470-linux.zip">android-studio-ide-171.4435470-linux.zip</a>
+                                </td>
+                                <td>829136897 bytes</td>
+                                <td>10846ed50582af4fb6acaecc22816f1c50252064ce1f30134e18ee8e7fed1ffb</td>
+                            </tr>
+                            <!-- 3.1 Canary 2 -->
+                            <tr>
+                                <td rowspan="5">3.1 Canary 2</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.1/android-studio-ide-171.4429293-windows.zip">android-studio-bundle-171.4429293-windows.zip</a>
+                                </td>
+                                <td>830399462 bytes</td>
+                                <td>240e73a7aa688060a57ecb22bddaad13f54e01d9038a21eae0267889c4d1ddc1</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNc79ly1fkvobnhmuaj31590fg779.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.1/android-studio-ide-171.4429293-windows32.zip">android-studio-ide-171.4429293-windows32.zip</a>
+                                </td>
+                                <td>829870713 bytes</td>
+                                <td>7c944f0f007854c01e55640f0f210166dd969cdf9f31b5acbe1638cceaf78b4b</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.1/android-studio-ide-171.4429293-mac.zip">android-studio-ide-171.4429293-mac.dmg</a>
+                                </td>
+                                <td>829881716 bytes</td>
+                                <td>0fd184698f49c0ee275b13470d53f051ce2b91dc8a7516e915517694e88f3ba0</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.1/android-studio-ide-171.4429293-linux.zip">android-studio-ide-171.4429293-linux.zip</a>
+                                </td>
+                                <td>828857102 bytes</td>
+                                <td>bc34ca1843aa8baa57608d7284c649e5f0f4737fc77ec9f7c1fccde7a34ba739</td>
+                            </tr>
                             <!-- 3.1 Canary 1 -->
                             <tr>
                                 <td rowspan="5">3.1 Canary 1</td>
