Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1669,8 +1669,8 @@
                             <tr>
                                 <td>许安灵</td>
                                 <td>¥1.24</td>
-                                <td></td>
-                                <td></td>
+                                <td>jubincn</td>
+                                <td>¥6.66</td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
