修改 AS 显示名字

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                             <tr>
                                 <td rowspan="2">Windows</td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.1/android-studio-ide-171.4435470-windows.zip">android-studio-bundle-171.4435470-windows.zip</a>
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.1/android-studio-ide-171.4435470-windows.zip">android-studio-ide-171.4435470-windows.zip</a>
                                 </td>
                                 <td>830677658 bytes</td>
                                 <td>eae3451ed1be108971e61330e7bcac96e1de37d292ebb7b871f86f5eb139eb4d</td>
@@ -359,7 +359,7 @@
                             <tr>
                                 <td rowspan="2">Windows</td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.1/android-studio-ide-171.4429293-windows.zip">android-studio-bundle-171.4429293-windows.zip</a>
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.1/android-studio-ide-171.4429293-windows.zip">android-studio-ide-171.4429293-windows.zip</a>
                                 </td>
                                 <td>830399462 bytes</td>
                                 <td>240e73a7aa688060a57ecb22bddaad13f54e01d9038a21eae0267889c4d1ddc1</td>
@@ -394,7 +394,7 @@
                             <tr>
                                 <td rowspan="2">Windows</td>
                                 <td align="left">
-                                    <a href="https://developer.android.google.cn/studio/archive.html#android-studio-3-1-canary-1">android-studio-bundle-171.4415322-windows.zip</a>
+                                    <a href="https://developer.android.google.cn/studio/archive.html#android-studio-3-1-canary-1">android-studio-ide-171.4415322-windows.zip</a>
                                 </td>
                                 <td>814707698 bytes</td>
                                 <td>c0e029eb49c17a8d0c3b8b0af4054210d7cb98f245ce6bd814265a41333a2257</td>
