Add Android Studio 3.1 Preview 4 Link

--- a/index.html
+++ b/index.html
@@ -317,21 +317,21 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <!-- 3.1 Canary 3 -->
+                            <!-- 3.1 Canary 4 -->
                             <tr>
-                                <td rowspan="5">3.1 Canary 3</td>
+                                <td rowspan="5">3.1 Canary 4</td>
                             </tr>
                             <tr>
                                 <td rowspan="2">Windows</td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.1/android-studio-ide-171.4435470-windows.zip">android-studio-ide-171.4435470-windows.zip</a>
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.3/android-studio-ide-171.4444016-windows.zip">android-studio-ide-171.4444016-windows.zip</a>
                                 </td>
                                 <td>830677658 bytes</td>
                                 <td>eae3451ed1be108971e61330e7bcac96e1de37d292ebb7b871f86f5eb139eb4d</td>
                                 <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tKfTcly1flfltqo9vsj31kw0qsqal.jpg">查看</a></td>
                             </tr>
                             <tr>
-                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.1/android-studio-ide-171.4435470-windows32.zip">android-studio-ide-171.4435470-windows32.zip</a>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.3/android-studio-ide-171.4444016-windows32.zip">android-studio-ide-171.4444016-windows32.zip</a>
                                 </td>
                                 <td>830148909 bytes</td>
                                 <td>07253725b03cc8f7b419a56f811e5a796268447e7417e8d2060a07983899527b</td>
@@ -339,7 +339,7 @@
                             <tr>
                                 <td>Mac OS X</td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.1/android-studio-ide-171.4435470-mac.zip">android-studio-ide-171.4435470-mac.dmg</a>
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.3/android-studio-ide-171.4444016-mac.zip">android-studio-ide-171.4444016-mac.dmg</a>
                                 </td>
                                 <td>830159388 bytes</td>
                                 <td>b82cd387da3f5787afffca096f19a0d47fd165a710fafc6d6fe50538377baf09</td>
@@ -347,7 +347,42 @@
                             <tr>
                                 <td>Linux</td>
                                 <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.1/android-studio-ide-171.4435470-linux.zip">android-studio-ide-171.4435470-linux.zip</a>
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.3/android-studio-ide-171.4444016-linux.zip">android-studio-ide-171.4444016-linux.zip</a>
+                                </td>
+                                <td>829136897 bytes</td>
+                                <td>10846ed50582af4fb6acaecc22816f1c50252064ce1f30134e18ee8e7fed1ffb</td>
+                            </tr>
+                            <!-- 3.1 Canary 3 -->
+                            <tr>
+                                <td rowspan="5">3.1 Canary 3</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.2/android-studio-ide-171.4435470-windows.zip">android-studio-ide-171.4435470-windows.zip</a>
+                                </td>
+                                <td>830677658 bytes</td>
+                                <td>eae3451ed1be108971e61330e7bcac96e1de37d292ebb7b871f86f5eb139eb4d</td>
+                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tKfTcly1flfltqo9vsj31kw0qsqal.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.2/android-studio-ide-171.4435470-windows32.zip">android-studio-ide-171.4435470-windows32.zip</a>
+                                </td>
+                                <td>830148909 bytes</td>
+                                <td>07253725b03cc8f7b419a56f811e5a796268447e7417e8d2060a07983899527b</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.2/android-studio-ide-171.4435470-mac.zip">android-studio-ide-171.4435470-mac.dmg</a>
+                                </td>
+                                <td>830159388 bytes</td>
+                                <td>b82cd387da3f5787afffca096f19a0d47fd165a710fafc6d6fe50538377baf09</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.1.0.2/android-studio-ide-171.4435470-linux.zip">android-studio-ide-171.4435470-linux.zip</a>
                                 </td>
                                 <td>829136897 bytes</td>
                                 <td>10846ed50582af4fb6acaecc22816f1c50252064ce1f30134e18ee8e7fed1ffb</td>
