Add Android Studio 3.0.1 link and sdk tools last version link

--- a/index.html
+++ b/index.html
@@ -457,6 +457,43 @@
                                 <td>813165347 bytes</td>
                                 <td>f2f5959168753a206342cb5b3da205c43c60a031df49dc92f6fd8b57cde6af23</td>
                             </tr>
+                            <!-- 3.0.1 正式版 -->
+                            <tr>
+                                <td rowspan="5">3.0.1 正式版</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/install/3.0.1.0/android-studio-ide-171.4443003-windows.exe">android-studio-bundle-171.4443003-windows.exe</a>
+                                </td>
+                                <td>683 MB</td>
+                                <td>1f71333fc8f31281b643a12d7f9d4c22e75ee7c14dc1faf00ce3d5291ef40bb0</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNc79ly1flru402ybpj31kw0u6n7j.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.1.0/android-studio-ide-171.4443003-windows32.zip">android-studio-ide-171.4443003-windows32.zip</a>
+                                </td>
+                                <td>738 MB</td>
+                                <td>cd644af01126a9d8cf372ada1f520579d443946e5cfa99e42234d539db59f842</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <nobr>Mac OS X</nobr>
+                                </td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/install/3.0.1.0/android-studio-ide-171.4443003-mac.dmg">android-studio-ide-171.4443003-mac.dmg</a>
+                                </td>
+                                <td>738 MB</td>
+                                <td>c4e0e3da447f4517128ee1a767ed130721fd2c0e0a1b311ce7dbc05766dcd221</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.0.1.0/android-studio-ide-171.4443003-linux.zip">android-studio-ide-171.4443003-linux.zip</a>
+                                </td>
+                                <td>737 MB</td>
+                                <td>ad7110ed2ffc662b7a13efa5064390c8e8e74815d8c688351bd8829331852acf</td>
+                            </tr>
                             <!-- 3.0 正式版 -->
                             <tr>
                                 <td rowspan="5">3.0 正式版</td>
@@ -585,6 +622,36 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <tr>
+                                <td rowspan="5">24.4.1</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a id="win-tools" href="https://dl.google.com/android/repository/sdk-tools-windows-3859397.zip">sdk-tools-windows-3859397.zip</a>
+                                </td>
+                                <td>132 MB</td>
+                                <td>7f6037d3a7d6789b4fdc06ee7af041e071e9860c51f66f7a4eb5913df9871fd2</td>
+                                <td rowspan="3"><a href="https://ws3.sinaimg.cn/large/006tNc79ly1flru3arp5kj31kw0ludmx.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <nobr>Mac OS X</nobr>
+                                </td>
+                                <td align="left">
+                                    <a id="mac-tools" href="https://dl.google.com/android/repository/sdk-tools-darwin-3859397.zip">sdk-tools-darwin-3859397.zip</a>
+                                </td>
+                                <td>82 MB</td>
+                                <td>4a81754a760fce88cba74d69c364b05b31c53d57b26f9f82355c61d5fe4b9df9</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a id="linux-tools" href="https://dl.google.com/android/repository/sdk-tools-linux-3859397.zip">sdk-tools-linux-3859397.zip</a>
+                                </td>
+                                <td>130 MB</td>
+                                <td>444e22ce8ca0f67353bda4b85175ed3731cae3ffa695ca18119cbacef1c1bea0</td>
+                            </tr>
                             <tr>
                                 <td rowspan="5">24.4.1</td>
                             </tr>
